@@ -7,6 +7,7 @@ import ch.njol.skript.expressions.base.PropertyExpression;
 import ch.njol.skript.lang.Expression;
 import ch.njol.skript.lang.SkriptParser.ParseResult;
 import ch.njol.util.Kleenean;
+import ch.njol.util.Math2;
 import ch.njol.util.coll.CollectionUtils;
 import org.bukkit.block.Block;
 import org.bukkit.block.data.BlockData;
@@ -14,33 +15,40 @@ import org.bukkit.block.data.Brushable;
 import org.bukkit.event.Event;
 import org.jetbrains.annotations.Nullable;
 
-@Name("Dusted Stage")
-@Description({
-	"Represents how far the block has been uncovered.",
-	"The only blocks that can currently be \"dusted\" are Suspicious Gravel and Suspicious Sand."
-})
-@Examples({
-	"send target block's maximum dusted stage",
-	"set {_sand}'s dusted stage to 2"
-})
+@Name("Brushing Stage")
+@Description("""
+	Represents how far the block has been uncovered.
+	The only blocks that can currently be "brushed" are Suspicious Gravel and Suspicious Sand.
+	0 means the block is untouched, the max (usually 3) means nearly fulled brushed.
+	Resetting this value will set it to 0.
+	""")
+@Example("""
+	# prevent dusting past level 1
+	on player change block:
+		if dusting progress of future event-blockdata > 1:
+			cancel event
+	""")
+@Example("""
+	# draw particles when dusting is complete!
+	on player change block:
+		if brushing progress of event-block is max brushing stage of event-block:
+			draw 20 totem of undying particles at event-block
+	""")
 @Since("2.12")
-@RequiredPlugins("Minecraft 1.20+")
+@Keywords({"brush", "brushing", "dusting"})
 public class ExprDustedStage extends PropertyExpression<Object, Integer> {
 
-	private static final boolean SUPPORTS_DUSTING = Skript.classExists("org.bukkit.block.data.Brushable");
-
 	static {
-		if (SUPPORTS_DUSTING)
-			register(ExprDustedStage.class, Integer.class,
-				"[:max[imum]] dust[ed|ing] (value|stage|progress[ion])",
-				"blocks/blockdatas");
+		register(ExprDustedStage.class, Integer.class,
+			"[:max[imum]] (dust|brush)[ed|ing] (value|stage|progress[ion])",
+			"blocks/blockdatas");
 	}
 
 	private boolean isMax;
 
 	@Override
 	public boolean init(Expression<?>[] exprs, int matchedPattern, Kleenean isDelayed, ParseResult parseResult) {
-		setExpr((Expression<Block>) exprs[0]);
+		setExpr(exprs[0]);
 		isMax = parseResult.hasTag("max");
 		return true;
 	}
@@ -72,7 +80,7 @@ public class ExprDustedStage extends PropertyExpression<Object, Integer> {
 	@Override
 	public void change(Event event, Object @Nullable [] delta, ChangeMode mode) {
 		if (isMax) return;
-		Integer value = (delta != null && delta.length > 0) ? (Integer) delta[0] : null;
+		int value = delta == null ? 0 : (Integer) delta[0];
 
 		for (Object obj : getExpr().getArray(event)) {
 			Brushable brushable = getBrushable(obj);
@@ -81,35 +89,15 @@ public class ExprDustedStage extends PropertyExpression<Object, Integer> {
 
 			int currentValue = brushable.getDusted();
 			int maxValue = brushable.getMaximumDusted();
-			int newValue = currentValue;
-
-			switch (mode) {
-				case SET -> {
-					if (value != null) {
-						newValue = value;
-					}
-				}
-				case ADD -> {
-					if (value != null) {
-						newValue = currentValue + value;
-					}
-				}
-				case REMOVE -> {
-					if (value != null) {
-						newValue = currentValue - value;
-					}
-				}
-				case RESET -> newValue = 0;
-				default -> {
-					return;
-				}
-			}
-
-			newValue = Math.max(0, Math.min(newValue, maxValue));
-
-			brushable.setDusted(newValue);
-			if (obj instanceof Block) {
-				((Block) obj).setBlockData(brushable);
+			long newValue = switch (mode) {
+				case SET, RESET -> value;
+				case ADD -> Math2.addClamped(currentValue, value);
+				case REMOVE -> Math2.addClamped(currentValue, -value);
+				default -> throw new IllegalArgumentException("Change mode " + mode + " is not valid for ExprDustedStage!");
+			};
+			brushable.setDusted(Math.clamp(newValue, 0, maxValue));
+			if (obj instanceof Block block) {
+				block.setBlockData(brushable);
 			}
 		}
 	}
@@ -118,14 +106,13 @@ public class ExprDustedStage extends PropertyExpression<Object, Integer> {
 	private Brushable getBrushable(Object obj) {
 		if (obj instanceof Block block) {
 			BlockData blockData = block.getBlockData();
-			if (blockData instanceof Brushable)
-				return (Brushable) blockData;
+			if (blockData instanceof Brushable brushable)
+				return brushable;
 		} else if (obj instanceof Brushable brushable) {
 			return brushable;
 		}
 		return null;
 	}
-
 
 	@Override
 	public Class<? extends Integer> getReturnType() {
