@@ -1,12 +1,10 @@
 package org.skriptlang.skript.bukkit.loottables.elements.expressions;
 
-import ch.njol.skript.Skript;
 import ch.njol.skript.doc.Description;
-import ch.njol.skript.doc.Examples;
+import ch.njol.skript.doc.Example;
 import ch.njol.skript.doc.Name;
 import ch.njol.skript.doc.Since;
 import ch.njol.skript.lang.Expression;
-import ch.njol.skript.lang.ExpressionType;
 import ch.njol.skript.lang.SkriptParser.ParseResult;
 import ch.njol.skript.lang.SyntaxStringBuilder;
 import ch.njol.skript.lang.util.SimpleExpression;
@@ -18,6 +16,8 @@ import org.bukkit.loot.LootContext;
 import org.bukkit.loot.LootTable;
 import org.jetbrains.annotations.Nullable;
 import org.skriptlang.skript.bukkit.loottables.LootContextWrapper;
+import org.skriptlang.skript.registration.SyntaxInfo;
+import org.skriptlang.skript.registration.SyntaxRegistry;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -29,20 +29,27 @@ import java.util.concurrent.ThreadLocalRandom;
 	"Returns the items of a loot table using a loot context. "
 		+ "Not specifying a loot context will use a loot context with a location at the world's origin."
 )
-@Examples({
-	"set {_items::*} to loot items of the loot table \"minecraft:chests/simple_dungeon\" with loot context {_context}",
-	"# this will set {_items::*} to the items that would be dropped from the simple dungeon loot table with the given loot context",
-	"",
-	"give player loot items of entity's loot table with loot context {_context}",
-	"# this will give the player the items that the entity would drop with the given loot context"
-})
+@Example("""
+	set {_items::*} to loot of the loot table "minecraft:chests/simple_dungeon" with loot context {_context}
+	# this will set {_items::*} to the items that would be dropped from the simple dungeon loot table with the given loot context
+	""")
+@Example("""
+	give player loot of entity's loot table with loot context {_context}
+	# this will give the player the items that the entity would drop with the given loot context
+	""")
 @Since("2.10")
 public class ExprLootItems extends SimpleExpression<ItemStack> {
 
-	static {
-		Skript.registerExpression(ExprLootItems.class, ItemStack.class, ExpressionType.COMBINED,
-			"[the] loot of %loottables% [(with|using) %-lootcontext%]",
-			"%loottables%'[s] loot [(with|using) %-lootcontext%]"
+	public static void register(SyntaxRegistry registry) {
+		registry.register(
+			SyntaxRegistry.EXPRESSION,
+			SyntaxInfo.Expression.builder(ExprLootItems.class, ItemStack.class)
+				.addPatterns(
+					"[the] loot of %loottables% [(with|using) [[loot] context] %-lootcontext%]",
+					"%loottables%'[s] loot [(with|using) [[loot] context] %-lootcontext%]"
+				)
+				.supplier(ExprLootItems::new)
+				.build()
 		);
 	}
 
@@ -65,7 +72,7 @@ public class ExprLootItems extends SimpleExpression<ItemStack> {
 			if (context == null)
 				return new ItemStack[0];
 		} else {
-			context = new LootContextWrapper(Bukkit.getWorlds().get(0).getSpawnLocation()).getContext();
+			context = new LootContextWrapper(Bukkit.getWorlds().getFirst().getSpawnLocation()).getContext();
 		}
 
 		List<ItemStack> items = new ArrayList<>();
@@ -97,7 +104,7 @@ public class ExprLootItems extends SimpleExpression<ItemStack> {
 
 		builder.append("the loot of", lootTables);
 		if (context != null)
-			builder.append("with", context);
+			builder.append("with loot context ", context);
 
 		return builder.toString();
 	}
